--- a/app/components/alert/alert.less
+++ b/app/components/alert/alert.less
@@ -1,12 +1,16 @@
 .alert-bop {
     z-index: 100;
     position: relative;
-    margin: 4px;
-    padding:10px;
-    border-color: red;
-    color: #5e4a27;
+    margin: 0px;
+    padding:5px;
+    border-color: none;
+    background-color: white;
+    color: #000000;
+    border-radius: 0;
 
-    button {
-        right: 0px !important;
+    p {
+        text-align:left;
+        margin-left:0.2cm;
+        margin-right:0.2cm;
     }
 }
